Add jacoco reporting settings